apiserver.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: bookstore
    role: api
  name: apiserver
spec:
  containers:
  - image: nginx
    name: apiserver
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
