command-demo3.yml
apiVersion: v1
kind: Pod
metadata:
    name: command-demo3
    labels:
        app: cka
spec:
    containers:
    - name: command-demo-container
      image: alpine
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo hello; sleep 10;done"]
